objects/Livre__c.object
<CustomObject>
    <fields>
        <fullName>Auteur__c</fullName>
        <description>Auteur du livre</description>
        <label>Auteur</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecrivain__c</fullName>
        <label>Ecrivain</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nb_chapitre__c</fullName>
        <label>Nb chapitre</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nb_de_pages__c</fullName>
        <label>Nb de pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Producteur__c</fullName>
        <label>Producteur</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tel_auteur__c</fullName>
        <label>Tel auteur</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tel_editeur__c</fullName>
        <label>Tel editeur</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>adresse_auteur__c</fullName>
        <label>adresse auteur</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_auteur__c</fullName>
        <label>email auteur</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>email_editeur__c</fullName>
        <label>email editeur</label>
        <type>Email</type>
    </fields>
    <label>Livre</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom du livre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Livres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>